libs/toolkit-macros-tests/tests/ui/fail/unknown_capability_with_suggestion.rs
use toolkit_macros::gear;

#[gear(name="x", capabilities=[rst])]
pub struct X;

fn main() {}

