libs/toolkit-macros-tests/tests/ui/fail/unknown_capability_with_suggestion.stderr
error: unknown capability 'rst'
              = help: did you mean one of: rest, rest_host?
 --> tests/ui/fail/unknown_capability_with_suggestion.rs:3:32
  |
3 | #[gear(name="x", capabilities=[rst])]
  |                                ^^^
